attempt #1 to fix dark mode color scheme and weird scrolling behavior on mobile

--- a/styles.css
+++ b/styles.css
@@ -96,11 +96,11 @@ h2 {
     border-top-right-radius: 5px;
 }
 
-#menu-content-2 {
+#menu-content-2, #menu-content-3 {
     border: 2px solid #CDB4DB;
 }
 
-#menu-content-3 {
+#menu-content-4 {
     border: 2px solid #CDB4DB;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -142,7 +142,8 @@ body {
 
 #about-me {
     display: flex;
-    gap: 3vw;
+    max-width: 100vw;
+    gap: 1vw;
 }
 
 #about-me-1, #about-me-2 {
@@ -150,7 +151,7 @@ body {
 }
 
 #about-me-1 {
-    width: 50vw;
+    width: 40vw;
     margin-top: -12px;
     padding: 25px 30px;
     background-color: #FFC8DD;
@@ -340,4 +341,11 @@ body {
     margin: 20px;
     width: 60vw;
     box-shadow: 1px 1px 5px #FFAFCC;
+}
+
+#contact-header {
+    scroll-margin-top: 75px;
+    color: #A2D2FF;
+    margin: 30px 30px 0;
+    align-content: end;
 }
